[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
# For WebAssembly (client-side)
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'console',
    'Window',
] }
yew = { version = "0.20", optional = true } # This would be an optional dependency if you choose to use it

# For the server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
rocket = { version = "0.5.0-rc.3", features = ["json"] } # Or Actix-web, Axum, etc.